@@ -49,3 +49,4 @@ npcsell = 100
 spawn = 150
 killall = 150
 emotion = 0
+emotion_ex = 0
